# supermat

./: .env.example  404.html  CONTRIBUTING.md  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: deploy_docs.yml  ensure_clean.yml  unit_tests.yml  update_hf_space.yml
Evaluation/: index.html
Installation/: index.html
Retriever/: index.html
SUMMARY/: index.html
Structure/: index.html
Structure/FileProcessor/: index.html
assets/: supermat_benchmarks_paragraph_chunks.csv  supermat_benchmarks_paragraph_chunks_semantic_diff.csv
docs/: Evaluation.md  Installation.md  Retriever.md  SUMMARY.md  auto_generate_refs.py
docs/Structure/: FileProcessor.md  index.md
docs/assets/: supermat_benchmarks_paragraph_chunks_baseline_diff.csv
notebooks/: citations_demo.ipynb  pdf_demo.ipynb  rag_benchmark.ipynb
reference/: index.html
reference/core/: index.html
reference/core/_utils/: index.html
reference/core/_utils/type_finder/: index.html
reference/core/chunking/: index.html
reference/core/chunking/base/: index.html
reference/core/chunking/simple_chunking/: index.html
reference/core/models/: index.html
reference/core/models/base_chunk/: index.html
reference/core/models/parsed_document/: index.html
reference/core/parser/: index.html
reference/core/parser/adobe_parser/: index.html
reference/core/parser/adobe_parser/_adobe_doc_cacher/: index.html
reference/core/parser/adobe_parser/adobe_internal_model/: index.html
reference/core/parser/adobe_parser/parser/: index.html
reference/core/parser/base/: index.html
reference/core/parser/file_processor/: index.html
reference/core/parser/pymupdf_parser/: index.html
reference/core/parser/pymupdf_parser/parser/: index.html
reference/core/parser/pymupdf_parser/pymupdf_internal_model/: index.html
reference/core/parser/pymupdf_parser/utils/: index.html
reference/core/parser/utils/: index.html
reference/core/utils/: index.html
reference/evaluation/: index.html
reference/evaluation/evalution/: index.html
reference/gradio/: index.html
reference/langchain/: index.html
reference/langchain/bindings/: index.html
reference/langchain/metrics/: index.html
search/: search_index.json
supermat/: __init__.py
supermat/core/: __init__.py  utils.py
supermat/core/_utils/: type_finder.py
supermat/core/chunking/: __init__.py  base.py  simple_chunking.py
supermat/core/chunking/tests/: test_simple_chunking.py
supermat/core/models/: __init__.py  base_chunk.py  parsed_document.py
supermat/core/parser/: __init__.py  base.py  file_processor.py  pdf_parser.py  utils.py
supermat/core/parser/adobe_parser/: __init__.py  _adobe_doc_cacher.py  _utils.py  adobe_internal_model.py  parser.py
supermat/core/parser/pymupdf_parser/: __init__.py  parser.py  pymupdf_internal_model.py  utils.py
supermat/core/parser/pymupdf_parser/tests/: test_parser.py
supermat/core/tests/: test_parsed_document.py  test_subsections.py
supermat/evaluation/: evalution.py
supermat/gradio/: __init__.py  __main__.py
supermat/langchain/: __init__.py  bindings.py  metrics.py
test_samples/: test.docx  test.json
