[project]
name = "supermat"
authors = [{ name = "Rishi Reddy", email = "rishi.reddyk@gmail.com" }]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Home = "https://github.com/rishikreddy1717/supermat"

[tool.poetry]
name = "supermat"
version = "0.0.0"
description = "<TO BE FILLED>"
authors = ["Rishi Reddy <rishi.reddyk@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "supermat" }]

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
fix-shallow-repository = true
vcs = "git"
metadata = false
dirty = false
strict = true
bump = false
latest-tag = true
pattern = "default-unprefixed"

[tool.flake8]
ignore = [
    "E203",  # whitespace before ':'
    "E266",  # Too many leading '#' for block comments
    "PL123", # Use Path.open instead of open
    "U101",  # Unused argument that starts with underscore
    "W503",  # Newline before binary operator
]
max-line-length = 120
max-complexity = 18
inline-quotes = "double"
known-modules = ":[supermat]"
application-names = "supermat"
max-expression-complexity = 10
per-file-ignores = [
    'supermat/core/parser/adobe_parser/parser.py:I900',
    'supermat/core/parser/pymupdf_parser/utils.py:I900',
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
docx2pdf = "^0.1.8"
langchain = "^0.3.7"
langchain-chroma = "^0.1.4"
langchain-core = "^0.3.21"
langsmith = "^0.1.137"
nltk = "^3.8.1"
orjson = "^3.10.11"
pdf2image = "^1.17.0"
pdfservices-sdk = { version = "^4.1.0", optional = true }
pillow = "^10.3.0"
pydantic = "^2.9.2"
pymupdf = { version = "^1.24.14", optional = true }
python-docx = "^1.1.0"
python-dotenv = "^1.0.1"
python-pptx = "^0.6.23"
rake-nltk = "^1.0.6"
reportlab = "^4.2.0"
sentence-transformers = "^2.7.0"
spacy = "==3.7.5"
spire-office = "^9.1.0"
tiktoken = "^0.8.0"
typing-extensions = "^4.12.2"
unicode = "^2.9"
unidecode = "^1.3.8"
# NOTE: This is only temp. Once the changes are merged, use original library
langchain-benchmarks = { git = "https://github.com/legendof-selda/langchain-benchmarks.git", rev = "951d3712e2d4449d1555b11e07454ae3059586dd" }
langchain-ollama = { version = "^0.2.3", optional = true }
langchain-anthropic = { version = "^0.3.6", optional = true }
langchain-openai = { version = "^0.2.3", optional = true }
langchain_huggingface = { version = "^0.1.2", optional = true }
gradio = { version = "^5.14.0", optional = true }

[tool.poetry.extras]
adobe = ["pdfservices-sdk"]
pymupdf = ["pymupdf"]
gradio = [
    "gradio",
    "langchain-ollama",
    "langchain-anthropic",
    "langchain-openai",
    "langchain_huggingface",
]


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.6.0"
flake8 = "^7.1.0"
flake8-absolute-import = "^1.0.0.2"
flake8-builtins = "^2.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-pyproject = "^1.2.3"
Flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
flake8-requirements = "^2.2.1"
flake8-unused-arguments = "^0.0.13"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"
isort = "^5.13.2"
jedi-language-server = "^0.41.4"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-xdist = "^3.6.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-custom-fences = "^0.1.2"
mkdocs-gen-files = "^0.4.0"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.0.15"
mkdocs-plotly-plugin = "^0.1.2"
mkdocs-section-index = "^0.3.5"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocstrings = { extras = ["python"], version = "^0.25.2" }
python-markdown-math = "^0.8"
mkdocs-macros-plugin = "^1.3.7"


[tool.poetry.group.backend.dependencies]
fastapi = { version = "^0.115.5", extras = ["standard"] }


[tool.poetry.group.frontend.dependencies]
gradio = "^5.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
